--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title></title>
 </head>
-<body>
-<h1>Hi</h1>
+<body ng-app="app">
+
+<hello-world></hello-world>
+
+
 <script src="build/bundle.js"></script>
 </body>
 </html>
